--- a/HRStore/views/product_details.xml
+++ b/HRStore/views/product_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
+    <!--页面  田紫微 计科162  161002420 实现 宋明惠 计科162 161002226 梁晓珂 计科162 161002221-->
     <template id="product_detail" name="HRStore Home">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
