--- a/HRStore/views/sign_up.xml
+++ b/HRStore/views/sign_up.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
-
+<!--页面  田紫微 计科162  161002420 实现 梁晓珂 计科162 161002221-->
     <template id="sign_up" name="Sign up">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
