--- a/HRStore/views/supplier_addProduct.xml
+++ b/HRStore/views/supplier_addProduct.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <odoo>
-
+<!--页面  李甜甜 计科162 161002229   实现 何钰霖 计科162 161002219-->
     <template id="supplier_addProduct" name="supplier_addProduct">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
