--- a/HRStore/views/customer_info.xml
+++ b/HRStore/views/customer_info.xml
@@ -1,35 +1,10 @@
 <?xml version="1.0"?>
 <odoo>
-<!--页面  李甜甜 计科162 161002229   实现 陈婉菁 计科162 161002218-->
+    <!--页面  李甜甜 计科162 161002229   实现 陈婉菁 计科162 161002218-->
     <template id="customer_info" name="customer_info">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
             <t t-call-assets="HRStore.my_custom_assets" tcss="false"/>
-            <script type="text/javascript">
-                window.onload = function()
-                {
-                var Jjian = document.getElementById("jian");
-                var Jjia = document.getElementById("jia");
-                var zj = document.getElementsByTagName("input")[0];
-                var i = 1;
-
-                Jjia.onclick = function()
-                {
-                //zj.value = ++i;
-                i = zj.value;
-                zj.value = ++i;
-
-                }
-                Jjian.onclick = function()
-                {
-                i = zj.value;
-                if(i!=0){
-                zj.value = --i;
-                }
-                }
-
-                }
-            </script>
         </head>
 
         <body class="body-wrapper">
@@ -211,10 +186,39 @@
                                                         <td>
                                                             <span class="jian" id="jian" style="cursor:pointer;">-
                                                             </span>
-                                                            <input name="pro_num" type="text"
+                                                            <input name="pro_num_hidden" id ="pro_num_hidden" type="hidden"
                                                                    t-att-value="cart_product[1]"
                                                                    style="width:50px;text-align:center;height:22px;"/>
+                                                            <input name="pro_num" type="text" id="pro_num"
+                                                                   style="width:50px;text-align:center;height:22px;"/>
                                                             <span class="jia" id="jia" style="cursor:pointer;">+</span>
+                                                            <script type="text/javascript">
+                                                                window.onload = function()
+                                                                {
+                                                                var Jjian = document.getElementById("jian");
+                                                                var Jjia = document.getElementById("jia");
+
+                                                                var zj = document.getElementById("pro_num_hidden");
+                                                                var num = document.getElementById("pro_num");
+                                                                num.value = zj.value;
+                                                                var i = 1;
+
+                                                                Jjia.onclick = function()
+                                                                {
+                                                                //zj.value = ++i;
+                                                                i = num.value;
+                                                                num.value = ++i;
+                                                                }
+                                                                Jjian.onclick = function()
+                                                                {
+                                                                i = num.value;
+                                                                if(i!=0){
+                                                                num.value = --i;
+                                                                }
+                                                                }
+
+                                                                }
+                                                            </script>
                                                         </td>
                                                         <td text="center">
                                                             <center>
@@ -304,7 +308,6 @@
                     </a>
                 </div>
             </footer>
-
 
         </body>
 
